# healthai-ai

./: .env.example  .gitignore  AI-API.md  AI-FRONT-API.md  API.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
data/: aliment.csv
healthai-api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
healthai-api/src/: main.py
healthai-api/src/core/: config.py  database.py  security.py
healthai-api/src/models/: utilisateur.py
healthai-api/src/repositories/: user_repository.py
healthai-api/src/schemas/: health.py
healthai-common/: pyproject.toml
healthai-common/src/healthai_common/: __init__.py  llm.py
healthai-training-ia-calories-estimation/: README.md  config.py  main.py  pyproject.toml
healthai-training-ia-calories-estimation/src/: __init__.py  data_loading.py  model_evaluation.py  model_serialization.py  model_training.py  preprocessing.py
healthai-vision/: .dockerignore  .env.example  Dockerfile  pyproject.toml
healthai-vision/src/: .dockerignore  database.py  database_mongo.py  main.py
healthai-vision/src/core/: config.py
healthai-vision/src/models/: aliment.py  log_aliment.py  profilsante.py  utilisateur.py
healthai-vision/src/routers/: analyze.py  nutrition_advice.py  nutrition_suggestion.py
healthai-vision/src/schemas/: vision.py
healthai-vision/src/services/: ai_service.py  nutrition_service.py  recommandation_service.py  suggestion_service.py
healthai-vision/tests/: test_database_mongo.py  test_endpoints_ia.py  test_llm_integration.py  test_main.py  test_nutrition_service.py  test_recommandation.py  test_vision.py
healthai-workout/: .env.example  Dockerfile  pyproject.toml
healthai-workout/models/: .gitignore
healthai-workout/models/CaloriesIA_1_0_0/: training_log.md  transformation_metadata.json
healthai-workout/models/CaloriesIA_1_0_0/gradient_boosting/: feature_importance.json  metrics.json  predictions.csv
healthai-workout/models/CaloriesIA_1_0_0/random_forest/: feature_importance.json  metrics.json  predictions.csv
healthai-workout/models/CaloriesIA_1_0_0/training_data/: Dataset_20260522_115951.csv  test_X.csv  test_y.csv  train_X.csv  train_y.csv
healthai-workout/models/RecoIA_1_0_0/: metadata.json  metrics.json
healthai-workout/scripts/: train_calorie_model.py  train_recommendation_model.py
healthai-workout/src/: database.py  main.py
healthai-workout/src/core/: config.py  rabbitmq.py
healthai-workout/src/models/: log_sante.py  log_seance.py  profil_sante.py  session.py  utilisateur.py
healthai-workout/src/routers/: ai_sessions.py  calorie_estimation.py  calorie_from_session.py  recommendations.py  sessions.py
healthai-workout/src/schemas/: __init__.py  ai_sessions.py  calorie_from_session.py  recommendation.py  session.py
healthai-workout/src/services/: ai_session_service.py  calorie_from_session_service.py  calorie_service.py  context_service.py  job_service.py  llm_service.py  recommendation_service.py  user_service.py  workout_generation.py
healthai-workout/tests/: conftest.py  test_ai_sessions.py  test_calorie_estimation.py  test_calorie_from_session.py  test_database_mongo.py  test_sessions.py
init.sql/: 01_schema.sql
