[project]
name = "healthai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "strawberry-graphql[fastapi]>=0.315.3",
    "uvicorn>=0.46.0",
    "pyjwt[crypto]>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "loguru>=0.7.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]
