[project]
name = "healthai-common"
version = "0.1.0"
description = "Client LLM partagés pour l'écosystème HealthAI IA"
readme = "README.md"
authors = [
    { name = "Joeybadd", email = "jnkunga@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
