[project]
name = "healthai-vision"
version = "0.1.0"
description = "HealthAI — Service d'analyse nutritionnelle par photo de repas"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    # ML / Vision
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.44.0",
    "Pillow>=10.4.0",
    # Base de données
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    # Rate limiting & sécurité
    "slowapi>=0.1.9",
    # Utilitaires
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "aio-pika>=9.6.2",
    "strawberry-graphql[fastapi]>=0.315.3",
    "pydantic-settings>=2.14.0",
    "ultralytics>=8.4.46",
    "motor>=3.7.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]
